# libra_sparging

./: .gitignore  LICENSE  README.md  animation.py  autoemulate_env.yml  config.py  correlations.ipynb  correlations.py  environment.yml  example2.py  example_correlation.py  helpers.py  input.yaml  main.py  model.py  output.json  pyproject.toml  sensitivity.ipynb  sensitivity.py  sparging101.py  sparging_LIBRA1L.py
.github/workflows/: ci.yml
src/sparging/: __init__.py  animation.py  config.py  correlations.py  helpers.py  inputs.py  model.py  postprocess.py
test/: standard_input.json  test_input.yml  test_simulation_input.py  test_simulation_results.py  test_solve.py
